# control-description-analyzer

./: .gitignore  Control Description Analyzer - User Guide.txt  Control_Scoring_Methodology_Review.md  Control_Scoring_Methodology_Review_Current.md  Control_Scoring_Methodology_Review_Updated.md  Control_Test_Data2.xlsx  Control_Test_Data2_analysis_results.xlsx  Control_Test_Data2_enhanced_analysis.xlsx  Dual_Mode_Scoring_Project_Plan.md  EdgeCaseResults.xlsx  README.md  README_updated.md  SharedWhere.md  SimpleElementDisplay.md  System_Architecture.md  TODO_ELEMENT_DETECTION.md  Test Text.txt  Test_Controls_for_Analyzer.csv  auditor_review_template.py  code_maintainability_report.md  column_mapping_test.py  config_manager.py  control_analyzer.py  control_analyzer2.py  control_analyzer_config_final_with_columns.yaml  control_analyzer_gui.py  debug_classifier.py  debug_element_analysis.py  debug_filter_issue.py  debug_simple_scoring.py  debug_vague_terms.py  debug_why_escalation.py  enhanced_diagnostic.py  enhanced_escalation.py  enhanced_multi_control.py  enhanced_what.py  enhanced_when.py  enhanced_who.py  enhanced_why.py  enhancedwhov2  (+48 more)
.claude/: settings.local.json
Control_Test_Data2_analysis_results_visualizations/: dashboard.html  worst_controls.html
batch_results/: all_results_checkpoint.pkl  batch_0001_20250425_201235.pkl  batch_0001_20250425_203331.pkl  batch_0002_20250425_201241.pkl  batch_0002_20250425_203339.pkl  batch_0003_20250425_201246.pkl  batch_0003_20250425_203348.pkl  emergency_results_20250425_201247.pkl
config/: control_analyzer.yaml  control_analyzer_updated.yaml  systems_catalog.yaml
docs/: ScoringUpdate.md  architecture.md  ci_cd_implementation_summary.md  ci_cd_setup.md  config_migration_guide.md  performance_test_results.md  scoring_methodology_detailed.md  spacy_analysis_slide.md  test_completion_report.md  test_implementation_summary.md  testing_strategy.md
generated_controls_for_testing_edge_cases_analysis_results_visualizations/: dashboard.html
scripts/: package.py  (+2 more)
(+81 files in other folders)
